missingkids/less/css/application.css
/* ... */
#arrow.down {
  border-left: 6px solid transparent;
  border-right: 6px solid transparent;
  border-top: 7px solid #626366;
}
#arrow.up {
  border-left: 6px solid transparent;
  border-right: 6px solid transparent;
  border-bottom: 7px solid #626366;
}
/*.stickyBox li:first-child{
        margin-top: 0;
    }
    .stickyBox li{
        list-style: none;
        background: #fff;
        border-radius: 10px;
        border: 1px solid #d5d6d8;
        padding: 10px;
        text-align: center;
        text-transform: uppercase;
        position: relative;
        margin-top: 10px;
    } 
    .stickyBox li i {
        color: #C6C8CA;
        position: absolute;
        right: 8px;
        top: 8px;
    } */
@media (max-width: 480px) {
  #arrow {
    left: 48%;
  }
  .stickyBox li:first-child {
    margin-top: 10px;
  }
  .stickyWrapper {
    position: fixed;
    width: 350px;
    left: 0;
    right: 0;
    padding: 5px 0 0;
    margin: 0 auto;
  }
  .stickyBox {
    height: auto;
    padding: 0;
  }
  .stickyBox li {
    width: 48%;
    margin-left: 0;
  }
  .stickyBox li:nth-child(odd) {
    float: left;
  }
  .stickyBox li:nth-child(even) {
    float: right;
  }
}
.teaser .panel-heading .search-page > h5 {
  position: static;
  padding-left: 8px;
  padding-right: 8px;
  text-align: left;
}
.search-page > p {
  padding-left: 8px;
  padding-right: 8px;
  text-align: left;
}
#pagination-demo {
  margin: 0px;
  text-align: center;
}
#pagination-demo .pagination li a {
  position: relative;
  float: left;
  width: 35px;
  padding: 3px 10px;
  line-height: 1.23;
  background-color: transparent;
  border: 0;
  margin-left: -1px;
}
#pagination-demo .pagination > li.page-item.disabled > a {
  color: #fff;
}
#pagination-demo .pagination > li.active > a.page-link {
  font-weight: bold;
  color: #fff;
}
ul.missing-person-lists img {
  width: 64px;
  height: 80px;
  border-radius: 10px;
}
#js-no-results-found {
  display: none;
}
picture,
img {
  max-width: 100%;
  height: auto;
}
.inner-wrapper {
  background: #fff;
  padding: 0 16px 16px;
  min-height: 400px;
  /*    @media (min-width: @screen-md) {
             padding: 0 16px 15px;

        }*/
}
.inner-wrapper:before,
.inner-wrapper:after {
  content: " ";
  display: table;
}
.inner-wrapper:after {
  clear: both;
}
.inner-wrapper:before,
.inner-wrapper:after {
  content: " ";
  display: table;
}
.inner-wrapper:after {
  clear: both;
}
.inner-wrapper > h1,
.inner-wrapper > h2,
.inner-wrapper > h3,
.inner-wrapper > h4,
.inner-wrapper > h5,
.inner-wrapper > h6,
.inner-wrapper > p {
  padding-left: 0;
  padding-right: 0;
}
.inner-wrapper h5 > p {
  font-family: inherit;
  font-weight: inherit;
  line-height: inherit;
  margin: inherit;
}
.inner-wrapper.no-wrapper {
  background: none;
  padding: 0;
}
.base-template .inner-wrapper h1,
.base-template .inner-wrapper h2,
.base-template .inner-wrapper h3,
.base-template .inner-wrapper h4,
.base-template .inner-wrapper h5,
.base-template .inner-wrapper h6,
.base-template .inner-wrapper p {
  padding-left: 0;
  padding-right: 0;
}
.show-grid [class^=col-] {
  padding-top: 10px;
  padding-bottom: 10px;
  background-color: #eee;
  background-color: rgba(86, 61, 124, 0.15);
  border: 1px solid #ddd;
  border: 1px solid rgba(86, 61, 124, 0.2);
}
hr {
  border-bottom: 1px solid #333;
}
@media (min-width: 767px) {
  [class*="col-"] {
    padding-left: 6.5px;
    padding-right: 6.5px;
  }
  .container {
    padding-left: 13px;
    padding-right: 13px;
  }
  .content-wrapper .container {
    padding-left: 0;
    padding-right: 0;
  }
}
@media (max-width: 480px) {
  .inner-wrapper {
    padding: 8px;
  }
  .sponsored-links li {
    margin-bottom: 16px;
  }
}
@media (min-width: 992px) and (orientation: landscape) {
  [class*="col-"] {
    padding-left: 8px;
    padding-right: 8px;
  }
  .container {
    padding-left: 0;
    padding-right: 0;
  }
  .video-image-component .offsetLR-md-1 {
    margin-left: 8.33333333%;
    margin-right: 8.33333333%;
  }
}
.row {
  position: relative;
}
@media (max-width: 480px) {
  .row {
    margin-left: -8px;
    margin-right: -8px;
  }
}
.pub-content img {
  float: left;
  margin: 0 16px 16px 0;
  border-radius: 10px;
  border: 1px solid #939597;
}
.pub-content p {
  display: block;
}
.pub-content p a {
  padding: 0;
  vertical-align: top;
}
.sponsored-links {
  list-style: none;
  padding: 0 0 16px;
  margin: 0 75px;
}
.sponsored-links:before,
.sponsored-links:after {
  content: " ";
  display: table;
}
.sponsored-links:after {
  clear: both;
}
.sponsored-links:before,
.sponsored-links:after {
  content: " ";
  display: table;
}
.sponsored-links:after {
  clear: both;
}
.sponsored-links li {
  text-align: center;
}
.sponsored-links li img {
  width: 64px;
  height: 64px;
}
.three-column .video-image-component .offsetLR-md-1 {
  margin-left: 0;
  margin-right: 0;
}
.three-column .video-image-component .col-md-10 {
  width: 100%;
}
.three-column .video-image-component p {
  padding: 0 16px;
}
.gen-info-list {
  margin-bottom: 0;
}
.gen-info-list .list-group-item img {
  margin-left: 0;
  border-radius: 10px;
}
.image-grid-container > * {
  margin-bottom: 16px;
}
.table-ncmec {
  border-top-right-radius: 0;
  border-top-left-radius: 0;
  border: 1px solid #626366;
  margin-left: 0;
  margin-right: 0;
  margin-bottom: 16px;
  display: inline-block;
}
.table-ncmec table {
  font-family: AvenirLTStd-Black;
  font-size: 13px;
}
.table-ncmec table thead {
  color: #fff;
}
.table-ncmec table thead tr {
  color: #fff;
}
.table-ncmec table thead tr th {
  padding: 10px 10px 10px 20px;
  background: #626366;
}
.table-ncmec table thead tr th:first-child {
  border-top-left-radius: 0;
}
.table-ncmec table thead tr th:last-child {
  border-top-right-radius: 0;
}
.table-ncmec table tbody tr {
  border-bottom: 0;
}
.table-ncmec table tbody tr td {
  padding: 10px 10px 10px 20px;
}
.table-ncmec h5 {
  padding: 0 16px;
}
#accordion .table-ncmec {
  margin-left: 0;
  margin-right: 0;
}
/* ... */

